[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Music/Battle_in_the_winter.ogg" type="AudioStream" id=2]
[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GUI/Screen/Sprites/arrowLeft.png" type="Texture" id=4]
[ext_resource path="res://GUI/Screen/Full_Screen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -3.0
autoplay = true

[node name="Tittle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -321.346
margin_top = 137.279
margin_right = 328.654
margin_bottom = 217.279
custom_fonts/font = SubResource( 1 )
text = "SANTA FITGHTER"
align = 1
valign = 1

[node name="Play" type="Button" parent="."]
margin_left = 537.361
margin_top = 344.607
margin_right = 697.361
margin_bottom = 414.607
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 0.45098, 0.45098, 0.45098, 1 )
text = "PLAY"
flat = true

[node name="Controls" type="Button" parent="."]
margin_left = 445.098
margin_top = 428.245
margin_right = 781.098
margin_bottom = 498.245
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.45098, 0.45098, 0.45098, 1 )
text = "CONTROLS"
flat = true

[node name="Exit_Game" type="Button" parent="."]
margin_left = 444.823
margin_top = 517.08
margin_right = 780.823
margin_bottom = 587.08
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.45098, 0.45098, 0.45098, 1 )
text = "EXIT GAME"
flat = true

[node name="Back" type="TextureButton" parent="."]
visible = false
margin_left = 12.39
margin_top = 599.012
margin_right = 62.39
margin_bottom = 649.012
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )

[node name="Controls_Info" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Pause" type="Label" parent="Controls_Info"]
editor/display_folded = true
margin_left = 64.3557
margin_top = 97.473
margin_right = 329.356
margin_bottom = 418.473
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAUSE



RETRY"
align = 1
valign = 1

[node name="Pause_Text" type="Label" parent="Controls_Info/Pause"]
margin_left = 67.011
margin_top = 120.909
margin_right = 191.011
margin_bottom = 332.909
custom_fonts/font = SubResource( 5 )
text = "Esc



ENTER"
align = 1
valign = 1

[node name="Tittles" type="Label" parent="Controls_Info"]
editor/display_folded = true
margin_left = 630.686
margin_top = 29.9592
margin_right = 895.686
margin_bottom = 350.959
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MOVEMENT




ATTACKS"
align = 1
valign = 1

[node name="Movement" type="Label" parent="Controls_Info/Tittles"]
margin_left = -220.814
margin_top = 92.6661
margin_right = 468.186
margin_bottom = 197.666
custom_fonts/font = SubResource( 5 )
text = "W, A, D
UP, LEFT AND RIGHT ARROWS"
align = 1
valign = 1

[node name="Attack" type="Label" parent="Controls_Info/Tittles"]
margin_left = -252.764
margin_top = 350.55
margin_right = 101.236
margin_bottom = 617.55
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PUNCH
SUPER ATTACK
KICK
THROW GIFT 1
THROW GIFT 2"
valign = 1

[node name="Attack_Controls" type="Label" parent="Controls_Info/Tittles"]
margin_left = 121.789
margin_top = 350.55
margin_right = 671.789
margin_bottom = 617.55
custom_fonts/font = SubResource( 5 )
text = "SPACE
S, M AND DOWN ARROW
N
B
V"
valign = 1

[node name="Full_Screen" parent="." instance=ExtResource( 5 )]

[node name="Alpha_version" type="Label" parent="."]
margin_left = 323.954
margin_top = 657.902
margin_right = 958.954
margin_bottom = 697.902
custom_fonts/font = SubResource( 6 )
text = "RedShadowFM10     Alpha v0.0.1"
align = 1
valign = 1

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Exit_Game" to="." method="_on_Exit_Game_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
